<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="luas2" type="Double"/>
        <variable name="kel2" type="Double"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true" android:id="@+id/scrollView2">

        <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".PersegiPanjangFragment">

            <!-- TODO: Update blank fragment layout -->
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_panjang"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:id="@+id/ed_alas"/>
            <EditText
                    android:id="@+id/ed_tinggi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_lebar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
                     android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/ed_alas"/>
            <Button
                    android:text="@string/hitung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_hitung2" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/ed_tinggi"
                    app:layout_constraintStart_toStartOf="@+id/ed_tinggi" android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_luassgt"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/b_hitung2"
                    app:layout_constraintStart_toStartOf="@+id/ed_tinggi"
                    android:layout_marginTop="32dp" android:text="@string/tv_luas"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_kelsgt"
                    android:textSize="24sp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_luassgt"
                    app:layout_constraintStart_toStartOf="@+id/tv_luassgt"
                    android:text="@string/keliling"/>
            <Button
                    android:text="@string/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_share2" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_kelsgt"/>
            <Button
                    android:text="@string/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_reset2" app:layout_constraintEnd_toEndOf="@+id/ed_tinggi"
                    android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
                    app:layout_constraintTop_toTopOf="@+id/b_hitung2"
                    app:layout_constraintBottom_toBottomOf="@+id/b_hitung2"/>
            <TextView
                    android:text="@{luas2.toString()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_luassgt"
                    app:layout_constraintTop_toTopOf="@+id/tv_luassgt"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_luassgt"
                    app:layout_constraintStart_toEndOf="@+id/tv_luassgt" android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:text="@{kel2.toString()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_kelsgt"
                    app:layout_constraintTop_toTopOf="@+id/tv_kelsgt"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_kelsgt"
                    app:layout_constraintStart_toEndOf="@+id/tv_kelsgt" android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>