<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="luas1"
                  type="Integer"/>
        <variable
                name="kel1"
                  type="Integer"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true" android:id="@+id/scrollView2">

        <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".PersegiPanjangFragment">

            <!-- TODO: Update blank fragment layout -->
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_panjang"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:id="@+id/ed_panjang"/>
            <EditText
                    android:id="@+id/ed_lebar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_lebar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/ed_panjang"/>
            <Button
                    android:text="@string/hitung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_hitung1" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/ed_lebar"
                    app:layout_constraintStart_toStartOf="@+id/ed_lebar" android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_luas"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/b_hitung1"
                    app:layout_constraintStart_toStartOf="@+id/ed_lebar"
                    android:layout_marginTop="32dp" android:text="@string/tv_luas"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_kelpp"
                    android:textSize="24sp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_luas"
                    app:layout_constraintStart_toStartOf="@+id/tv_luas"
                    android:text="@string/keliling"/>
            <Button
                    android:text="@string/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_share1" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_kelpp"/>
            <Button
                    android:text="@string/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_reset1" app:layout_constraintEnd_toEndOf="@+id/ed_lebar"
                    android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
                    app:layout_constraintTop_toTopOf="@+id/b_hitung1"
                    app:layout_constraintBottom_toBottomOf="@+id/b_hitung1"/>
            <TextView
                    android:text="@{luas1.toString()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_luaspp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="@+id/tv_luas"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_luas"
                    app:layout_constraintStart_toEndOf="@+id/tv_luas"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:id="@+id/txt_kelpp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{kel1.toString()}"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="@+id/tv_kelpp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_kelpp"
                    app:layout_constraintStart_toEndOf="@+id/tv_kelpp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
